# python-package-template

./: README.MD  README.md  pyproject.toml
.github/workflows/: python-package.yml
core_modules_folder/: __init__.py
docs/: conf.py  index.rst
docs/_build/: output.txt  python.txt  undoc.pickle
docs/_build/.doctrees/: environment.pickle  index.doctree  readme_link.doctree
docs/_build/.doctrees/autoapi/your_package_name/: index.doctree
docs/_build/.doctrees/autoapi/your_package_name/your_module/: index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  readme_link.html  search.html  searchindex.js
docs/_build/html/.doctrees/: environment.pickle  index.doctree  readme_link.doctree
docs/_build/html/.doctrees/autoapi/: index.doctree
docs/_build/html/_modules/: index.html  your_package_name.html
docs/_build/html/_modules/your_package_name/: your_module.html
docs/_build/html/_sources/autoapi/: index.rst.txt
docs/_build/html/_sources/autoapi/your_package_name/: index.rst.txt
docs/_build/html/_sources/autoapi/your_package_name/your_module/: index.rst.txt
docs/_build/html/autoapi/: index.html
docs/_build/html/autoapi/your_package_name/: index.html
docs/_build/html/autoapi/your_package_name/your_module/: index.html
tests/: test_your_module.py
your_package_name/: __init__.py  your_module.py
