[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "just_a_template" # <- ADAPT
dynamic = ["version"]
description = "python package for whatever" # <- ADAPT
readme = "README.md"
requires-python = ">3.8,<3.11"
authors = [ # <- ADAPT
  {email = "sem.vijverberg@beyond-weather.com"},
  {name = "Sem Vijverberg, Jannes van Ingen"},
]
maintainers = [ # <- ADAPT
  {name = "Sem Vijverberg", email = "sem.vijverberg@beyond-weather.com"},
  {name = "Jannes van Ingen", email = "jannes.van.ingen@beyond-weather.com"},
]
keywords = [
    "AI",
    "S2S",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
dependencies = [ # <- ADAPT
    "xarray",
]

[project.optional-dependencies]
dev = [
    "bump2version",
    "hatch",
    "ruff",
    "black",
    "isort",
    "mypy",
    "pytest",
    "pytest-cov",
]

docs = [  # Required for ReadTheDocs
  "myst_parser",
  "sphinx",
  "sphinx_rtd_theme",
  "sphinx-autoapi",
  "coverage[toml]",
]

[project.urls]
"Bug Tracker" = "https://github.com/Beyond-Weather-Git/bw-forecasting/issues" # <- ADAPT
#Documentation = "https://ai4s2s.readthedocs.io/" # <- ADAPT
Homepage = "https://github.com/Beyond-Weather-Git" # <- ADAPT

[tool.hatch.version]
path = "your_package_name/__init__.py" # <- ADAPT

[tool.hatch.publish.index]
disable = true  # Requires confirmation when publishing to pypi.

[tool.hatch.build.targets.sdist]
exclude = [
  "/.github", "/.mypy_cache", "/.pytest_cache", "/.githooks",
  "sonar-project.properties"
]

[tool.hatch.build.targets.wheel]
packages = ["your_package_name"] # <- ADAPT

[tool.hatch.envs.default]
features = ["dev"]

[tool.hatch.envs.default.scripts]
lint = [
  "ruff check .",
  "mypy .",
  "black --check --diff .",
  "isort --check-only --diff .",
]
format = ["isort .", "black .", "lint",]
test = ["pytest ./tests/ --doctest-modules",]
coverage = [
  "pytest --cov --cov-report term --cov-report xml --junitxml=xunit-result.xml tests/",
]

[tool.hatch.envs.docs]
features = ["docs"]

[tool.hatch.envs.docs.scripts]
build = [
  "sphinx-build -c docs -b doctest docs docs/_build",
  "sphinx-build -c docs -b coverage docs docs/_build",
  "sphinx-build -c docs -b html docs docs/_build/html",
]

[tool.pytest.ini_options]
testpaths = ["pytest"]

[tool.mypy]
ignore_missing_imports = true

[tool.black]
line-length = 88
src_paths = ["your_package_name", "main_folder", "tests"] # <- ADAPT, allows you to load modules from these folders

[tool.ruff]
select = [
  "E",  # pycodestyle
  "F",  # pyflakes
  "B",  # flake8-bugbear
  "D",  # pydocstyle
  "C",  # mccabe complexity
#  "I",  # isort (autosort not working correctly, disabled for now).
  "N",  # PEP8-naming
  "UP",  # pyupgrade (upgrade syntax to current syntax)
  "PLE",  # Pylint error https://github.com/charliermarsh/ruff#error-ple
  "PLR",  # Pylint refactor (e.g. too-many-arguments)
  "PLW",  # Pylint warning (useless-else-on-loop)
]
extend-select = [
  "D401",  # First line should be in imperative mood
  "D400",  # First line should end in a period.
  "D404",  # First word of the docstring should not be 'This'
]
ignore = [
  "E501",  # Line length: fails on many docstrings (needs fixing).
  "PLR2004",  # magic value used in comparsion (i.e. `if ndays == 28: month_is_feb`).
]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["A", "B", "C", "D", "E", "F"]
unfixable = []
line-length = 88
exclude = ["docs", "build"]
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
target-version = "py38"

# Ignore `N803` and `N806` name should be lowercase in ML files.
[tool.ruff.per-file-ignores]
"tests/**" = ["D"]
"bwcore/forecasting/**" = ["N803", "N806"]
"bwcore/hyperparameter_searcher.py" = ["N803", "N806"]
"tests/test_hyperparameter_searcher.py" = ["N803", "N806"]
"main_folder/main.py" = ["N803", "N806"]

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.mccabe]
max-complexity = 10

# Configuration for when ruff's import sorting is fixed.
# [tool.ruff.isort]
# known-first-party = ["your_package_name"]
# force-single-line = true
# lines-after-imports = 2
# no-lines-before = ["future","standard-library","third-party","first-party","local-folder"]

# note that currently isort is not executed using ruff
[tool.isort]
py_version=39
skip = [".gitignore", ".dockerignore"]
skip_glob = ["docs/*"]
force_single_line = true
lines_after_imports = 2
known_first_party = ["your_package_name"] # <- ADAPT
src_paths = ["your_package_name", "tests"] # <- ADAPT where to apply isort
line_length = 120
no_lines_before = ["FUTURE","STDLIB","THIRDPARTY","FIRSTPARTY","LOCALFOLDER"]

[tool.coverage.run]
branch = true
source = ["your_package_name", "tests", "main_folder"] # <- ADAPT, which folder to run your checks
command_line = "-m pytest"

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "@overload",
  "if TYPE_CHECKING:",
  "if typing.TYPE_CHECKING:"
]